--- a/.github/workflows/cachix.yaml
+++ b/.github/workflows/cachix.yaml
@@ -16,7 +16,7 @@ jobs:
           - system: x86_64-darwin
             isMain: false
       fail-fast: false
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.system }}
     steps:
       - uses: actions/checkout@v4
       - uses: cachix/install-nix-action@v25
