--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -19,15 +19,24 @@ jobs:
             isMain: false
       fail-fast: false
     runs-on: ${{ matrix.system }}
+    env:
+      EXTRA_NIX_CONFIG: |
+        extra-trusted-public-keys = public:AdkE6qSLmWKFX4AptLFl+n+RTPIo1lrBhT2sPgfg5s4=
+          extra-substituters = https://cache.jzbor.de/public
     steps:
       - uses: actions/checkout@v4
-      - uses: cachix/install-nix-action@v25
+
+      - name: "Install Nix"
+        uses: DeterminateSystems/nix-installer-action@main
+        with:
+          extra-conf: |
+            ${{ env.EXTRA_NIX_CONFIG }}
 
       - name: "Setup Attic cache"
         uses: ryanccn/attic-action@v0
         with:
-          endpoint: ${{ secrets.ATTIC_ENDPOINT }}
-          cache: ${{ secrets.ATTIC_CACHE }}
+          endpoint: ${{ vars.ATTIC_ENDPOINT }}
+          cache: ${{ vars.ATTIC_CACHE }}
           token: ${{ secrets.ATTIC_TOKEN }}
 
       - uses: cachix/cachix-action@v14
