--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -53,7 +53,7 @@ jobs:
         run: |
           nix run github:juspay/omnix -- ci \
             --extra-access-tokens ${{ secrets.GITHUB_TOKEN }} \
-            run . \
+            run \
               --systems "${{ steps.determine-architecture.outputs.arch }}" \
               --results=$HOME/omci.json
       # Push the Nix cache
